Start implementation of the distributed processing model (activity processing)